Cleaned up and written test.
All passed :)

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<title>Snake Game</title>
 		<meta charset="utf-8" />
-
-		<script src="snake.js"></script>
 	</head>
 	<body>
 		<canvas width="400" height="400" id="game"></canvas>
-		<script>
+		<script type="module">
+			import { SnakeGame, SnakeGameRenderer, KeyboardInput } from './snake.js';
+
 			const game = new SnakeGame( 10, 10 ),
 				renderer = new SnakeGameRenderer( game, document.getElementById( 'game' ) ),
 				input = new KeyboardInput( game );
